--- a/index.html
+++ b/index.html
@@ -8,15 +8,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-      <h1 id="title"> Good Vibes Form</h1>
-    </header>
-    <p id="description>Tell us something about yourself
-    
-    <form id="survey-form" action="index.html" method="post">
+    <h1 id="title"> Good Vibes Form</h1>
+    <div class="master-div-style">
+      <p id="description">Tell us something about yourself"</p>
+       <form id="survey-form" action="index.html" method="post">
      <fieldset>
       <div class="top-form">
-        <p>Tell us something positive that happend to you today</p>
         <label for ="name">Name</label>
         <input type="text" id="name" name="" placeholder="Enter your name"><br>
 
