--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <div class="master-div-style">
       <p id="description">Tell us something about yourself"</p>
        <form id="survey-form" action="index.html" method="post">
-     <fieldset>
       <div class="top-form">
         <label for ="name">Name</label>
         <input type="text" id="name" name="" placeholder="Enter your name"><br>
@@ -54,9 +53,12 @@
             <input type="checkbox">
             <label for="">Elated</label><br>
 
+            <textarea id="experience" rows="4" cols="40">Please enter your experience
+            </textarea>
+
             
     </div>
-</fieldset>
+
 </form>
 
 </body>
