--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="survey">
+    <main>
        <h1 id="title"> Good Vibes Form</h1>
-       <p id="description">Tell us something about yourself</p>
-       <form id="survey-form" action="index.html" method="post">
-        <div class="top-form">
+       <div class="top-form">
+          <p id="description">Tell us about something positive that happened to you today.</p>
+          <form id="survey-form" action="index.html" method="post">
+            <div class="top-form">
             <div class="labels">
              <label for ="name" id="name-label">Name</label>
              <input type="text" id="name" name="" placeholder="Enter your name">
@@ -52,7 +53,7 @@
             <label for="time">Evening</label><br>
 
             <p>What emotions did you experience?</p>
-            <input type="checkbox">
+            <input type="checkbox" name="feeling-check" class="user-selection" value="1">
             <label for="">Excited</label><br>
 
             <input type="checkbox">
