--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
 
            <div class="form-row">
-              <label for="time" class="time" id="time">At what time did it happen?</label>
+              <label for="time" class="time" id="time">At what time did it happen?</label><br>
             
             <input type="radio" id="morning">
             <label for="time">Morning</label><br>
